@@ -1,5 +1,11 @@
 2008-02-08  Bastien Nocera  <hadess@hadess.net>
 
+	* data/totem.ui:
+	* src/totem.c: (totem_action_toggle_aspect_ratio):
+	Fix to make totem_action_toggle_aspect_ratio() work again
+
+2008-02-08  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem.c: (totem_action_handle_scroll):
 	Don't assert when doing a mouse scroll in windowed mode
 	(Closes: #515063)
